# heyemily

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
bots/: lite_1_buy_per_sec.yaml  lite_hft_micro_arb.yaml
learning_examples/01_websockets/: realtime_prices.py  realtime_prices_multiple_subs.py
learning_examples/02_market_data/: get_all_prices.py  get_market_metadata.py
learning_examples/03_account_info/: get_open_orders.py  get_user_state.py
learning_examples/04_trading/: place_limit_order.py
learning_examples/05_funding/: check_spot_perp_availability.py  check_spot_perp_pairs_availability.py  get_funding_rates.py
learning_examples/06_copy_trading/: mirror_spot_orders.py  print_parsed_user_events.py  print_raw_websocket_messages.py
learning_examples/06_copy_trading/order_scenarios/: cancel_twap_order.py  modify_order.py  place_order.py  place_orders_limit.py
platform/web/: .env.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
platform/web/src/: App.tsx  api.ts  hlAddress.ts  styles.css  wallet.ts
scripts/: verify_platform.py
src/: run_lite_worker.py
src/core/: endpoint_router.py
src/exchanges/hyperliquid/: adapter.py
src/hft_platform/: __init__.py  config.py  database.py  deps.py  hl_public.py  main.py  models.py  schemas.py  security.py  telemetry_hub.py  vault.py  wallet_auth.py  worker_supervisor.py
src/litebot/: __init__.py  asyncio_setup.py  config.py  engine.py  exchange_hl.py  interfaces.py  jit_kernels.py  risk.py  strategy_micro_arb.py  telemetry.py
(+3 files in other folders)
